<resources>
    <string name="app_name">S.COM</string>

    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_me">Find Me</string>
    <string name="create_a_story">Create A Story</string>
    <string name="photos">Photos</string>
    <string name="friends">Friends</string>
    <string name="followers">Followers</string>
    <string name="setting">setting</string>

    <string name="your_email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="name">Name</string>
    <string name="profession">Profession</string>
    <string name="welcome_to_socom">Welcome To S.COM</string>
    <string name="already_have_an_accont">Already have an accont?</string>
    <string name="login">Sign In</string>

    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="delete_for_everyone">Delete for Everyone</string>
    <string name="cancel">Cancel</string>
    <string name="delete_for_me">Delete for Me</string>
    <string name="create_post">Create Post</string>
    <string name="post">POST</string>

    <string name="follow">Follow</string>
    <string name="add_people">Add People</string>
    <string name="connect_with_social_world_with_this_media">Connect with social world with this media</string>
    <string name="oops_no_internet_nplease_check_your_internet_connection_and_try_again">Oops! No Internet\nPlease check your Internet connection and try again…</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="whats_in_your_mind">Whats in your mind?</string>
    <string name="add_to_your_post">Add to your Post</string>
    <string name="app_description">S.COM is a platform where you can post your interest and people give their feedbacks.\nSee what is in your friend\'s mind</string>
    <string name="my_friends">My Friends</string>
    <string name="zero">0</string>
    <string name="refresh">Refresh</string>

    <string name="tap_to_chat">Tap to chat</string>
    <string name="you_have_notification">You have notification</string>
    <string name="following">Following</string>
    <string name="chats">Chats</string>
    <string name="requests">Requests</string>
    <string name="type_a_message">Message…</string>
    <string name="backarrow">backarrow Image</string>
    <string name="attachments">attachments Image</string>
    <string name="camera_image">Camera Image</string>
    <string name="background_green_circle_image">Background green circle Image</string>
    <string name="mic_button_image">Mic button Image</string>
    <string name="comment_post_button_image">Comment Post Button Image</string>
    <string name="post_image">Post Image</string>
    <string name="no_internet_image">No Internet Image</string>
    <string name="image_icon">Image Icon</string>
    <string name="add_story_image">Add Story Image</string>
    <string name="chat_image">Chat Image</string>
    <string name="cover_photo">Cover Photo Image</string>
    <string name="ic_change_cover_photo_icon_image">Ic change cover photo Icon image</string>
    <string name="verify_account_image">Verify account Image</string>
    <string name="add_friend_image">Add Friend Image</string>
    <string name="comment_image">Comment Image</string>
    <string name="call_image">Call Image</string>
    <string name="avatar_image">Avatar Image</string>
    <string name="feeling_image">Feeling Image</string>
    <string name="download_image">Download Image</string>
    <string name="live_image">Live Image</string>
    <string name="profile_image">Profile Image</string>
    <string name="block">Block</string>
    <string name="if_you_accept_member_will_able_to_message_you">If you accept, member will able to message you.</string>
    <string name="accept_message_request_from_user">Accept message request from User?</string>
    <string name="un_block">UnBlock</string>

</resources>